--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint": "^8.57.0",
     "eslint-config-next": "14.1.3",
     "postcss": "^8.5.3",
+    "postcss-nesting": "^13.0.1",
     "tailwindcss": "^4.1.4",
     "typescript": "^5.4.2"
   }
